Bug 858992 - Don't sync pinned bookmarks. r=nalexander
UltraBlame original commit: 5f5bbd697d25612b2505009778aab60951654514